--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
       <header>
         <h1 class="text-center text-danger">
           <span class="fa fa-youtube"></span>
-          <a href="index.html">YouTube Search</a>
+          YouTube Search
         </h1>
       </header>
       <ul class="nav nav-tabs">
